--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8" />
     <title>title</title>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mlb5dcb.css">
+    <link rel="preload" href="SKPupok-Solid.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
-    <h1> List Example - Feb 29th 2024 </h1>
+    <div class="frontpage">
+      
+        <img src="images/frontpage.jpg">
+        <h1> ADIRONDACK HIGH PEAKS </h1>
+        
+        <p>Marcy <i>Algonquin</i> Haystack <i>Skylight</i> Whiteface <i>Dix </i>Gray <i>Iroquois</i> Basin <i>Gothics</i> Colden <i>Giant </i>Nippletop <i>Santanoni </i>
+            Redfield <i>Wright </i>Saddleback <i>Panther </i>TableTop <i>Rocky Peak Ridge </i>Macomb <i>Armstrong</i> Hough <i>Seward </i>Marshall <i>Allen </i>Big Slide <i>Esther </i>
+            Upper Wolf Jaw <i>Lower Wolf Jaw </i>Street <i>Phelps </i>Donaldson <i>Seymour </i>Sawteeth <i>Cascade </i>South Dix <i>Porter </i>Colvin <i>Emmons </i>Dial <i>Grace </i>
+            Blake <i>Cliff</i> Nye <i>Couchsachraga</i>
+        </p>
+    </div>
     <div id="datashelf" class="data-container">
-changing changing changing
+
     </div>
 </body>
 </html>
+
