--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/mlb5dcb.css">
     <link rel="preload" href="SKPupok-Solid.woff2" as="font" type="font/woff2" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <div class="frontpage">
@@ -14,7 +16,7 @@
         <img src="images/frontpage.jpg">
         <h1> ADIRONDACK HIGH PEAKS </h1>
         
-        <p>Marcy <i>Algonquin</i> Haystack <i>Skylight</i> Whiteface <i>Dix </i>Gray <i>Iroquois</i> Basin <i>Gothics</i> Colden <i>Giant </i>Nippletop <i>Santanoni </i>
+        <p id="demo">Marcy <i>Algonquin</i> Haystack <i>Skylight</i> Whiteface <i>Dix </i>Gray <i>Iroquois</i> Basin <i>Gothics</i> Colden <i>Giant </i>Nippletop <i>Santanoni </i>
             Redfield <i>Wright </i>Saddleback <i>Panther </i>TableTop <i>Rocky Peak Ridge </i>Macomb <i>Armstrong</i> Hough <i>Seward </i>Marshall <i>Allen </i>Big Slide <i>Esther </i>
             Upper Wolf Jaw <i>Lower Wolf Jaw </i>Street <i>Phelps </i>Donaldson <i>Seymour </i>Sawteeth <i>Cascade </i>South Dix <i>Porter </i>Colvin <i>Emmons </i>Dial <i>Grace </i>
             Blake <i>Cliff</i> Nye <i>Couchsachraga</i>
