--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -16,10 +16,7 @@
         <img src="images/frontpage.jpg">
         <h1> ADIRONDACK HIGH PEAKS </h1>
         
-        <p id="demo">Marcy <i>Algonquin</i> Haystack <i>Skylight</i> Whiteface <i>Dix </i>Gray <i>Iroquois</i> Basin <i>Gothics</i> Colden <i>Giant </i>Nippletop <i>Santanoni </i>
-            Redfield <i>Wright </i>Saddleback <i>Panther </i>TableTop <i>Rocky Peak Ridge </i>Macomb <i>Armstrong</i> Hough <i>Seward </i>Marshall <i>Allen </i>Big Slide <i>Esther </i>
-            Upper Wolf Jaw <i>Lower Wolf Jaw </i>Street <i>Phelps </i>Donaldson <i>Seymour </i>Sawteeth <i>Cascade </i>South Dix <i>Porter </i>Colvin <i>Emmons </i>Dial <i>Grace </i>
-            Blake <i>Cliff</i> Nye <i>Couchsachraga</i>
+        <p id="typewriter">Marcy <i>Algonquin</i> Haystack <i>Skylight</i> Whiteface <i>Dix </i>Gray <i>Iroquois</i> Basin <i>Gothics</i> Colden <i>Giant </i>Nippletop <i>Santanoni </i>Redfield <i>Wright </i>Saddleback <i>Panther </i>TableTop <i>Rocky Peak Ridge </i>Macomb <i>Armstrong</i> Hough <i>Seward </i>Marshall <i>Allen </i>Big Slide <i>Esther </i>Upper Wolf Jaw <i>Lower Wolf Jaw </i>Street <i>Phelps </i>Donaldson <i>Seymour </i>Sawteeth <i>Cascade </i>South Dix <i>Porter </i>Colvin <i>Emmons </i>Dial <i>Grace </i>Blake <i>Cliff</i> Nye <i>Couchsachraga</i>
         </p>
     </div>
     <div id="datashelf" class="data-container">
